<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/modify_noteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_15dp"
        android:text="@string/modefy_password"
        android:textColor="@color/colorPassword"
        android:textSize="@dimen/pw_size" />

    <EditText
        android:id="@+id/reset_password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/modify_noteView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/gap5dp"
        android:ems="6"
        android:hint="@string/reset_password"
        android:inputType="numberPassword"
        android:textColor="@color/colorPassword"
        android:textSize="@dimen/pw_size" />

    <EditText
        android:id="@+id/confirm_password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_password_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/gap5dp"
        android:ems="6"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword"
        android:textColor="@color/colorPassword"
        android:textSize="@dimen/pw_size" />

    <Button
        android:id="@+id/modify_confirm_view"
        android:background="@color/colorBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_15dp"
        android:text="@string/confirm"
        android:textColor="@color/colorPassword"
        android:textSize="@dimen/pw_size" />


</RelativeLayout>