<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <TextView
        android:id="@+id/noteView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_15dp"
        android:text="@string/notes"
        android:textColor="@color/colorPassword"
        android:textSize="@dimen/pw_size" />

    <EditText
        android:id="@+id/password_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noteView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/gap5dp"
        android:ems="6"
        android:hint="@string/default_pw_notes"
        android:inputType="numberPassword"
        android:textColor="@color/colorPassword"
        android:textSize="@dimen/pw_size" />

    <TextView
        android:id="@+id/confirm_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_15dp"
        android:text="@string/confirm"
        android:textColor="@color/colorPassword"
        android:textSize="@dimen/pw_size" />


</RelativeLayout>